03-deploy-core-app/02-deploy-gitlab/conf/02-gitlab-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab-server
  namespace: core-app
  labels:
    app: gitlab-server
    type: gitlab
spec:
  serviceName: gitlab-server
  selector:
    matchLabels:
      app: gitlab-server
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-server
        type: gitlab
    spec:
      containers:
        - name: gitlab-redis
          image: redis:6.2
          volumeMounts:
            - name: gitlab-redis
              mountPath: /data
        - name: gitlab-server
          image: sameersbn/gitlab:15.1.2
          volumeMounts:
            - name: gitlab-data
              mountPath: /home/git/data
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: pvc-gitlab-data
        - name: gitlab-redis
          persistentVolumeClaim:
            claimName: pvc-gitlab-redis
