03-deploy-core-app/02-deploy-gitlab/conf/03-gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
  name: svc-gitlab
  namespace: core-app
spec:
  ports:
    - name: gitlab-web
      protocol: TCP
      port: 80
    - name: gitlab-ssh
      protocol: TCP
      port: 22
  selector:
    app: gitlab
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab
  name: svc-gitlab-lb
  namespace: core-app
  annotations:
    metallb.universe.tf/allow-shared-ip: "primary-ip-share"
spec:
  ports:
    - name: gitlab-ssh
      protocol: TCP
      port: 22
  selector:
    app: gitlab
  type: LoadBalancer
