03-deploy-core-app/02-deploy-gitlab/conf/04-create-gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlab
  namespace: core-app
  labels:
    type: gitlab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gitlab.d7z.net
      secretName: d7z-net-tls
  rules:
    - host: gitlab.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  name: gitlab-web
